--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="免费模板：来自极客标签社区">
     <meta name="author" content="gbtags.com">
 
-    <title>Squadfree - Free bootstrap 3 one page template</title>
+    <title>Wideplum blog</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css">
@@ -34,7 +34,7 @@
                     <i class="fa fa-bars"></i>
                 </button>
                 <a class="navbar-brand" href="index.html">
-                    <h1>SQUAD FREE</h1>
+                    <h1>李宽的博客</h1>
                 </a>
             </div>
 
@@ -64,8 +64,8 @@
     <section id="intro" class="intro">
 	
 		<div class="slogan">
-			<h2>WELCOME TO <span class="text_color">SQUAD</span> </h2>
-			<h4>WE ARE GROUP OF GENTLEMEN MAKING AWESOME WEB WITH BOOTSTRAP</h4>
+			<h2> Wideplum <span class="text_color">blog</span> </h2>
+			<h4>他（产品经理）在这里分享干货</h4>
 		</div>
 		<div class="page-scroll">
 			<a href="#service" class="btn btn-circle">
